# sdk-ingestao-vetorial

./: .gitignore  README.md  sdk-release-plan.json
.changeset/: README.md  standalone-release-readiness.md
.github/scripts/: sdk_release.py
.github/workflows/: sdk-ci.yml  sdk-release-csharp.yml  sdk-release-flutter.yml  sdk-release-go.yml  sdk-release-js.yml  sdk-release-main.yml  sdk-release-php.yml  sdk-release-python.yml  sdk-sync-php-split.yml
docs/: RELEASE_SETUP.md
js/: README.md
python/: README.md
python/src/ingestao_vetorial_sdk/: client.py
scripts/: setup-github-release.ps1
sdk/csharp/: IngestaoVetorial.sln  README.md
sdk/csharp/IngestaoVetorial.SDK/: ApiException.cs  Client.cs  IngestaoVetorial.SDK.csproj  Models.cs
sdk/csharp/IngestaoVetorial.SDK.Tests/: ClientTests.cs  IngestaoVetorial.SDK.Tests.csproj
sdk/flutter/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
sdk/flutter/lib/: ingestao_vetorial_flutter_sdk.dart
sdk/flutter/lib/src/: client.dart  models.dart
sdk/flutter/test/: client_test.dart
sdk/go/: README.md  client.go  client_test.go  go.mod  types.go
sdk/js/: README.md  package.json  tsconfig.json
sdk/js/src/: client.ts  index.ts  types.ts
sdk/js/tests/: client.test.ts
sdk/php/: README.md  composer.json
sdk/python/: pyproject.toml
sdk/python/tests/: test_client.py
