[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingestao-vetorial-sdk"
version = "0.1.1"
description = "SDK Python para consumir a API do Ingestão Vetorial"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name="Ezequiel Tavares" }]
dependencies = [
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/ezequiel88/sdk-ingestao-vetorial"
Repository = "https://github.com/ezequiel88/sdk-ingestao-vetorial"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ingestao_vetorial_sdk*"]